# poetry-showcase

./: README.md
consumer/: pyproject.toml
consumer/consumer/: main.py
custom-dir-name/: pyproject.toml
custom-dir-name/my_real_package/: lib.py
multi-package/: pyproject.toml
multi-package/lib/extra_package/: lib.py
multi-package/mypackage/: lib.py
my-normal-package/: pyproject.toml
my-normal-package/my_normal_package/: lib.py
