[tool.poetry]
name = "multi-package"
version = "0.1.0"
description = ""
authors = ["Lucas Berger <lucask.berger@gmail.com>"]
readme = "README.md"
packages = [
    {include = "extra_package", from = "lib"}, 
    {include = "mypackage"}
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
